force-app/main/default/objects/Order/fields/Backorder_Option__c.field-meta.xml
<CustomField>
    <fullName>Backorder_Option__c</fullName>
    <label>Backorder Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALLOW INCOMPLETE LINES AND PACKAGES</fullName>
                <label>Allow Incomplete Lines and Packages</label>
            </value>
            <value>
                <fullName>INCOMPLETE LINES NOT ALLOWED</fullName>
                <label>Incomplete Lines Not Allowed</label>
            </value>
            <value>
                <fullName>INCOMPLETE PACKAGES NOT ALLOWED</fullName>
                <label>Incomplete Packages Not Allowed</label>
            </value>
            <value>
                <fullName>No Partial Deliveries Allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>