force-app/main/default/objects/Order/fields/Change_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_No__c</fullName>
    <label>Change Order No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>