force-app/main/default/objects/Order/fields/CO_Clause__c.field-meta.xml
<CustomField>
    <fullName>CO_Clause__c</fullName>
    <label>Change Order Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>