force-app/main/default/objects/Order/fields/Commission_Split_Dest_Rep__c.field-meta.xml
<CustomField>
    <fullName>Commission_Split_Dest_Rep__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commission Split (Dest Rep)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>