force-app/main/default/objects/Order/fields/Commission_Split_Eng_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Commission_Split_Eng_Rep_2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Commission Split (Eng Rep 2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>