force-app/main/default/objects/Order/fields/Customer_s_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_PO_Number__c</fullName>
    <label>Customer&apos;s PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>