force-app/main/default/objects/Order/fields/Delivery_District__c.field-meta.xml
<CustomField>
    <fullName>Delivery_District__c</fullName>
    <label>Delivery District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>ASIA PAC</fullName>
            </value>
            <value>
                <fullName>EAR</fullName>
            </value>
            <value>
                <fullName>ME/OCNA/SK</fullName>
            </value>
            <value>
                <fullName>UPSTREAM</fullName>
                <label>Domestic Upstream</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>