force-app/main/default/objects/Order/fields/Delivery_Market__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Market__c</fullName>
    <label>Delivery Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OGUPS</fullName>
                <label>Oil and Gas Upstream</label>
            </value>
            <value>
                <fullName>OGDWN</fullName>
                <label>Oil and Gas Downstream</label>
            </value>
            <value>
                <fullName>CHEM</fullName>
                <label>Chemical</label>
            </value>
            <value>
                <fullName>PHARM</fullName>
                <label>Pharmaceutical &amp; Biotech</label>
            </value>
            <value>
                <fullName>FOOD</fullName>
                <label>Food &amp; Beverage</label>
            </value>
            <value>
                <fullName>AERO</fullName>
                <label>Aircraft and Aerospace (Commercial)</label>
            </value>
            <value>
                <fullName>DEF</fullName>
                <label>Defense (Incl. Aircraft &amp; Aerospace)</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other Industrial Markets</label>
            </value>
            <value>
                <fullName>SALESFORCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>