force-app/main/default/objects/Order/fields/Delivery_Terms_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms_Location__c</fullName>
    <label>Delivery Terms Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>