force-app/main/default/objects/Order/fields/Destination_Rep__c.field-meta.xml
<CustomField>
    <fullName>Destination_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Rep (Account)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please search for valid rep codes</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner &amp; House Account</value>
        </filterItems>
        <filterItems>
            <field>Account.External_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Destination Rep (Account))</relationshipLabel>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>