force-app/main/default/objects/Order/fields/Drawings_Attached__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Attached__c</fullName>
    <label>Drawings Attached</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submittal Drawings</fullName>
            </value>
            <value>
                <fullName>Approval Drawings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>