force-app/main/default/objects/Order/fields/End_User_City__c.field-meta.xml
<CustomField>
    <fullName>End_User_City__c</fullName>
    <label>End User City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>