force-app/main/default/objects/Order/fields/End_User_Country__c.field-meta.xml
<CustomField>
    <fullName>End_User_Country__c</fullName>
    <label>End User Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>