force-app/main/default/objects/Order/fields/End_User_Street__c.field-meta.xml
<CustomField>
    <fullName>End_User_Street__c</fullName>
    <label>End User Street</label>
    <type>TextArea</type>
</CustomField>