force-app/main/default/objects/Order/fields/Eng_Rep_1__c.field-meta.xml
<CustomField>
    <fullName>Eng_Rep_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eng Rep 1(Account)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please search for valid rep codes</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner &amp; House Account</value>
        </filterItems>
        <filterItems>
            <field>Account.External_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>Please search for Rep Codes and click on show all results for your search</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>