force-app/main/default/objects/Order/fields/Eng_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Eng_Rep_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eng Rep 2(Account)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner &amp; House Account</value>
        </filterItems>
        <filterItems>
            <field>Account.External_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Eng Rep 2(Account))</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>