force-app/main/default/objects/Order/fields/Freight_Information__c.field-meta.xml
<CustomField>
    <fullName>Freight_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freight Information</label>
    <referenceTo>Freight_Information__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>