force-app/main/default/objects/Order/fields/IFS_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>IFS_Payment_Terms__c</fullName>
    <formula>CASE(SBQQ__Quote__r.SBQQ__PaymentTerms__c, &apos;Net 15&apos;, &apos;15&apos;, &apos;Net 30&apos;, &apos;30&apos;, &apos;Net 45&apos;, &apos;45&apos;, &apos;Net 60&apos;, &apos;60&apos;, &apos;Net 90&apos;, &apos;90&apos;, &apos;30&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IFS Payment Terms</label>
    <type>Text</type>
</CustomField>