force-app/main/default/objects/Order/fields/Order_Priority2__c.field-meta.xml
<CustomField>
    <fullName>Order_Priority2__c</fullName>
    <label>Order Priority*</label>
    <length>9</length>
    <type>Text</type>
</CustomField>