force-app/main/default/objects/Order/fields/Ordering_District__c.field-meta.xml
<CustomField>
    <fullName>Ordering_District__c</fullName>
    <label>Ordering District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>ASIA PAC</fullName>
            </value>
            <value>
                <fullName>EAR</fullName>
            </value>
            <value>
                <fullName>ME/OCNA/SK</fullName>
            </value>
            <value>
                <fullName>Domestic Upstream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>