force-app/main/default/objects/Order/fields/Ordering_Region__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Region__c</fullName>
    <label>Ordering Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AF1</fullName>
            </value>
            <value>
                <fullName>D01</fullName>
                <label>Domestic 1</label>
            </value>
            <value>
                <fullName>D02</fullName>
                <label>Domestic 2</label>
            </value>
            <value>
                <fullName>D03</fullName>
                <label>Domestic 3</label>
            </value>
            <value>
                <fullName>D04</fullName>
                <label>Domestic 4</label>
            </value>
            <value>
                <fullName>D05</fullName>
                <label>Domestic 5</label>
            </value>
            <value>
                <fullName>D06</fullName>
                <label>Domestic 6</label>
            </value>
            <value>
                <fullName>DUPS</fullName>
                <label>Domestic Upstream</label>
            </value>
            <value>
                <fullName>E0</fullName>
                <label>East 0</label>
            </value>
            <value>
                <fullName>E1</fullName>
                <label>East 1</label>
            </value>
            <value>
                <fullName>E2</fullName>
                <label>East 2</label>
            </value>
            <value>
                <fullName>EU1</fullName>
                <label>European Union 1</label>
            </value>
            <value>
                <fullName>EU2</fullName>
                <label>European Union 2</label>
            </value>
            <value>
                <fullName>EU3</fullName>
                <label>European Union 3</label>
            </value>
            <value>
                <fullName>EU4</fullName>
                <label>European Union 4</label>
            </value>
            <value>
                <fullName>FR1</fullName>
                <label>N France</label>
            </value>
            <value>
                <fullName>LA1</fullName>
                <label>Latin America 1</label>
            </value>
            <value>
                <fullName>LA2</fullName>
                <label>Latin America 2</label>
            </value>
            <value>
                <fullName>LA3</fullName>
                <label>Latin America 3</label>
            </value>
            <value>
                <fullName>ME1</fullName>
                <label>Middle East 1</label>
            </value>
            <value>
                <fullName>ME2</fullName>
                <label>Middle East 2</label>
            </value>
            <value>
                <fullName>OC1</fullName>
                <label>Oceania</label>
            </value>
            <value>
                <fullName>FR2</fullName>
                <label>S France</label>
            </value>
            <value>
                <fullName>DOE3</fullName>
            </value>
            <value>
                <fullName>DDH1</fullName>
            </value>
            <value>
                <fullName>DOE2</fullName>
            </value>
            <value>
                <fullName>DNIH</fullName>
            </value>
            <value>
                <fullName>LOE1</fullName>
            </value>
            <value>
                <fullName>DOE1</fullName>
            </value>
            <value>
                <fullName>DLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>