force-app/main/default/objects/Order/fields/Quote_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Quote_Product_Group__c</fullName>
    <label>Quote Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continental Disc Corporation</fullName>
            </value>
            <value>
                <fullName>Groth</fullName>
            </value>
            <value>
                <fullName>LaMot Valve and Arrester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>