force-app/main/default/objects/Order/fields/Ship_Via__c.field-meta.xml
<CustomField>
    <fullName>Ship_Via__c</fullName>
    <label>Ship Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>247</fullName>
                <label>24/7 Delivery SERVICE</label>
            </value>
            <value>
                <fullName>ADL</fullName>
                <label>ADITYA LOGISTICS (DOMESTIC FOR GCMPL)</label>
            </value>
            <value>
                <fullName>AFW</fullName>
                <label>AMERICAN FREIGHTWAYS</label>
            </value>
            <value>
                <fullName>ARC</fullName>
                <label>ARC TRANSPORT (DOMESTIC FOR GCMPL)</label>
            </value>
            <value>
                <fullName>BEL</fullName>
                <label>BELLAIRE</label>
            </value>
            <value>
                <fullName>BWY</fullName>
                <label>BEST WAY PREPAID AND ADD</label>
            </value>
            <value>
                <fullName>CHE</fullName>
                <label>CHEETAH</label>
            </value>
            <value>
                <fullName>CMS</fullName>
                <label>COMET SEA SHIPMENT FREIGHT</label>
            </value>
            <value>
                <fullName>CTS</fullName>
                <label>CTS GROUP FREIGHT</label>
            </value>
            <value>
                <fullName>CPU</fullName>
                <label>CUSTOMER&apos;S SHIPPING AGENT PICK UP</label>
            </value>
            <value>
                <fullName>DEL</fullName>
                <label>DELIVER</label>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>FE2</fullName>
                <label>FED EX 2 Business days not freight</label>
            </value>
            <value>
                <fullName>F2A</fullName>
                <label>FED EX 2 DAY AM NOT FREIGHT</label>
            </value>
            <value>
                <fullName>FEO</fullName>
                <label>FED EX FIRST OVERNIGHT</label>
            </value>
            <value>
                <fullName>FF2</fullName>
                <label>FED EX FREIGHT 2 DAY NOT INTNL</label>
            </value>
            <value>
                <fullName>FF3</fullName>
                <label>FED EX FREIGHT 3 DAY NOT INTNL</label>
            </value>
            <value>
                <fullName>FFF</fullName>
                <label>FED EX FREIGHT FIRST OVERNIGHT</label>
            </value>
            <value>
                <fullName>FFE</fullName>
                <label>FED EX FREIGHT INTNL ECONOMY</label>
            </value>
            <value>
                <fullName>FFI</fullName>
                <label>FED EX FREIGHT INTNL PRIORITY</label>
            </value>
            <value>
                <fullName>FFP</fullName>
                <label>FED EX Freight Priority NOT INTNL</label>
            </value>
            <value>
                <fullName>FEG</fullName>
                <label>FED EX Ground NOT FREIGHT</label>
            </value>
            <value>
                <fullName>FEH</fullName>
                <label>FED EX HOME DELIVERY</label>
            </value>
            <value>
                <fullName>FIF</fullName>
                <label>FED EX INTERNATIONAL FIRST OVERNITE</label>
            </value>
            <value>
                <fullName>FIO</fullName>
                <label>FED EX INTL PRIORITY NOT FREIGHT</label>
            </value>
            <value>
                <fullName>FE3</fullName>
                <label>FED EX INTL ECONOMY NOT FRT (INDIA)</label>
            </value>
            <value>
                <fullName>FE1</fullName>
                <label>FED EX PRIORITY OVERNIGHT NOT FRT</label>
            </value>
            <value>
                <fullName>FES</fullName>
                <label>FED EX SAVER (INTRA US ONLY)</label>
            </value>
            <value>
                <fullName>FSO</fullName>
                <label>FED EX STANDARD OVERNIGHT NOT FRT</label>
            </value>
            <value>
                <fullName>ODF</fullName>
                <label>OLD DOMINION FREIGHT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>