force-app/main/default/objects/Order/fields/Sold_By_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sold_By_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold By Rep (Account)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner &amp; House Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Sold By Rep (Account))</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>