force-app/main/default/objects/Order/fields/Sourcing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Entity__c</fullName>
    <label>Sourcing Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Liberty</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Stafford</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>GCMPL</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Europe</label>
            </value>
            <value>
                <fullName>Not Allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>